# pump-parser

./: .gitignore  add_browser_storage.py  add_download_button.py  add_error_logging.py  all_pumps_database.json  app.py  app.py.backup_before_python_only  app_python_only.py  brand_qualifier.py  cdm_learned_config.json  cdm_parser.py  cdm_parser_pymupdf.py  cdm_parser_v11_fixed.py  cdm_parser_v12.py  cdm_parser_v13.py  cdm_parser_v18.py  cdm_parser_v19.py  cdm_parser_v2.py  cdm_parser_v2.py.backup  cdm_parser_v2.py.before_fix  cdm_parser_v2.py.old  cdm_parser_v20.py  cdm_parser_v23.py  cdm_parser_v8.py  config.py  debug_pymupdf_text.py  gpu_manager.py  parser_app_v2.py  parser_wrapper_function.py  pump_table_classifier.py  pump_validators.py  pyproject.toml  quick_test.py  reparse_all.py  reparse_two_phase.py  requirements.txt  restore_index.py  test_cmi.py  test_id_format.py  test_imports.py  (+11 more)
LTV/: ltv_bot.py
models/: parse_result.py  pump_model.py
pipeline/: confidence.py  deepseek_fallback.py  orchestrator.py  stage_docling.py  stage_ocr.py  stage_selfcorrect.py  stage_vision_api.py  stage_vlm.py
pump_parser/: __init__.py  __main__.py  cli.py  config.py  db.py  models.py  server.py
pump_parser/classifiers/: __init__.py  column_classifier.py  page_classifier.py  table_type.py  unit_detector.py
pump_parser/core/: __init__.py  ingestion.py  orchestrator.py  table_extractor.py  text_extractor.py
storage/: base_manager.py  task_manager.py
templates/: index.html  index.html.backup_before_js_fix  index.html.backup_before_python_only
vision/: vision_pdf_parser.py
(+32 files in other folders)
