[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pump-parser"
version = "1.0.0"
description = "Universal self-learning PDF pump catalog parser"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "easyocr>=1.7"]
vision = ["google-genai>=1.0", "openai>=1.0"]
export = ["openpyxl>=3.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
pump-parser = "pump_parser.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
